// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiHeaderTable can render a complicated table with nesting 1`] = `
<table class="govuk-table table">
  <thead class="tableHead">
    <tr>
      <td colspan="1"
          rowspan="2"
      >
      </td>
      <th colspan="2"
          rowspan="1"
          scope="colgroup"
      >
        State-funded primary
      </th>
      <th colspan="2"
          rowspan="1"
          scope="colgroup"
      >
        State-funded secondary
      </th>
    </tr>
    <tr>
      <th colspan="1"
          rowspan="1"
          scope="col"
      >
        2006/07
      </th>
      <th colspan="1"
          rowspan="1"
          scope="col"
      >
        2007/08
      </th>
      <th colspan="1"
          rowspan="1"
          scope="col"
      >
        2006/07
      </th>
      <th colspan="1"
          rowspan="1"
          scope="col"
      >
        2007/08
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th colspan="1"
          rowspan="1"
          scope="row"
          class
      >
        Indicator value 1
      </th>
      <td class="govuk-table__cell--numeric">
        35
      </td>
      <td class="govuk-table__cell--numeric">
        no data
      </td>
      <td class="govuk-table__cell--numeric">
        315
      </td>
      <td class="govuk-table__cell--numeric">
        no data
      </td>
    </tr>
    <tr>
      <th colspan="1"
          rowspan="1"
          scope="row"
          class
      >
        Indicator value 2
      </th>
      <td class="govuk-table__cell--numeric">
        18,015
      </td>
      <td class="govuk-table__cell--numeric">
        18,350
      </td>
      <td class="govuk-table__cell--numeric">
        106,720
      </td>
      <td class="govuk-table__cell--numeric">
        107,995
      </td>
    </tr>
    <tr>
      <th colspan="1"
          rowspan="1"
          scope="row"
          class
      >
        Indicator value 3
      </th>
      <td class="govuk-table__cell--numeric">
        6,790
      </td>
      <td class="govuk-table__cell--numeric">
        6,190
      </td>
      <td class="govuk-table__cell--numeric">
        68,685
      </td>
      <td class="govuk-table__cell--numeric">
        58,435
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`MultiHeaderTable can render a complicated table with nesting 2`] = `
<table class="govuk-table table">
  <thead class="tableHead">
    <tr>
      <td colspan="1"
          rowspan="2"
      >
      </td>
      <th colspan="2"
          rowspan="1"
          scope="colgroup"
      >
        State-funded primary
      </th>
      <th colspan="2"
          rowspan="1"
          scope="colgroup"
      >
        State-funded secondary
      </th>
    </tr>
    <tr>
      <th colspan="1"
          rowspan="1"
          scope="col"
      >
        2006/07
      </th>
      <th colspan="1"
          rowspan="1"
          scope="col"
      >
        2007/08
      </th>
      <th colspan="1"
          rowspan="1"
          scope="col"
      >
        2006/07
      </th>
      <th colspan="1"
          rowspan="1"
          scope="col"
      >
        2007/08
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th colspan="1"
          rowspan="1"
          scope="row"
          class
      >
        Indicator value 1
      </th>
      <td class="govuk-table__cell--numeric">
        35
      </td>
      <td class="govuk-table__cell--numeric">
        no data
      </td>
      <td class="govuk-table__cell--numeric">
        315
      </td>
      <td class="govuk-table__cell--numeric">
        no data
      </td>
    </tr>
    <tr>
      <th colspan="1"
          rowspan="1"
          scope="row"
          class
      >
        Indicator value 2
      </th>
      <td class="govuk-table__cell--numeric">
        18,015
      </td>
      <td class="govuk-table__cell--numeric">
        18,350
      </td>
      <td class="govuk-table__cell--numeric">
        106,720
      </td>
      <td class="govuk-table__cell--numeric">
        107,995
      </td>
    </tr>
    <tr>
      <th colspan="1"
          rowspan="1"
          scope="row"
          class
      >
        Indicator value 3
      </th>
      <td class="govuk-table__cell--numeric">
        6,790
      </td>
      <td class="govuk-table__cell--numeric">
        6,190
      </td>
      <td class="govuk-table__cell--numeric">
        68,685
      </td>
      <td class="govuk-table__cell--numeric">
        58,435
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`MultiHeaderTable can render basic table 1`] = `
<table class="govuk-table table">
  <thead class="tableHead">
    <tr>
      <td colspan="1"
          rowspan="1"
      >
      </td>
      <th colspan="1"
          rowspan="1"
          scope="col"
      >
        Column heading
      </th>
      <th colspan="1"
          rowspan="1"
          scope="col"
      >
        Column heading 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th colspan="1"
          rowspan="1"
          scope="row"
          class
      >
        Row header
      </th>
      <td class="govuk-table__cell--numeric">
        425,590
      </td>
      <td class="govuk-table__cell--numeric">
        425,591
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`MultiHeaderTable can render basic table 2`] = `
<table class="govuk-table table">
  <thead class="tableHead">
    <tr>
      <td colspan="1"
          rowspan="1"
      >
      </td>
      <th colspan="1"
          rowspan="1"
          scope="col"
      >
        Column heading
      </th>
      <th colspan="1"
          rowspan="1"
          scope="col"
      >
        Column heading 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th colspan="1"
          rowspan="1"
          scope="row"
          class
      >
        Row header
      </th>
      <td class="govuk-table__cell--numeric">
        425,590
      </td>
      <td class="govuk-table__cell--numeric">
        425,591
      </td>
    </tr>
  </tbody>
</table>
`;
